--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "private": true,
   "packageManager": "npm@11.6.4",
+  "engines":{
+    "node": ">=20.19.0"
+  },
   "dependencies": {
     "@angular/common": "^21.0.0",
     "@angular/compiler": "^21.0.0",
@@ -30,7 +33,8 @@
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "node": "^20.19.0"
   },
   "devDependencies": {
     "@angular/build": "^21.0.1",
