--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "private": true,
   "packageManager": "npm@11.6.4",
-  "engines":{
+  "engines": {
     "node": ">=20.19.0"
   },
   "dependencies": {
@@ -32,15 +32,19 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "node": "^20.19.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "node": "^20.19.0"
+    "tailwindcss": "^4.1.17",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^21.0.1",
     "@angular/cli": "^21.0.1",
     "@angular/compiler-cli": "^21.0.0",
+    "@tailwindcss/postcss": "^4.1.12",
     "jsdom": "^27.1.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.12",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
   }
